re PR c++/41144 (ice for legal code with -O2 in get_alias_set)

2009-09-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41144
	* tree.c (build_array_type): Do not record types marked
	with structural equality in the canonical type hashtable.

	* g++.dg/torture/pr41144.C: New testcase.

From-SVN: r151461